#banner image not showing  bug fix

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url('/images/donation13.jpg');
+    background-image: url('../images/donation13.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 691px;
